# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
workspace/sessions/: cli_task3-test.jsonl
