[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability (VictoriaLogs and VictoriaTraces)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
mcp-obs = "mcp_obs.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
